# SteelMC

./: AGENTS.md  Cargo.toml  _typos.toml  clippy.toml
package-content/: config.schema.json  config.toml
steel/: Cargo.toml
steel-core/: Cargo.toml
steel-core/benches/: worldgen.rs
steel-core/src/: config.rs  enchantment_helper.rs  lib.rs
steel-core/src/behavior/: block.rs  context.rs  mod.rs
steel-core/src/behavior/blocks/: mod.rs
steel-core/src/behavior/blocks/building/: amethyst_cluster.rs  bar_block.rs  budding_amethyst.rs  cauldron_block.rs  composter_block.rs  door_block.rs  fence_block.rs  fence_gate_block.rs  ladder_block.rs  lava_cauldron_block.rs  mod.rs  potent_sulfur_block.rs  scaffolding_block.rs  slab_block.rs  sponge_block.rs  stair_block.rs  trapdoor_block.rs  wall_block.rs  waterlogged_transparent_block.rs  weathering_block.rs
steel-core/src/behavior/blocks/colored/: stained_glass_pane_block.rs
steel-core/src/behavior/blocks/container/: barrel_block.rs  beehive_block.rs
steel-core/src/behavior/blocks/decoration/: cake_block.rs  candle_block.rs  candle_cake_block.rs  chain_block.rs  sign_block.rs  torch_block.rs
steel-core/src/behavior/blocks/fluid/: bubble_column_block.rs  liquid_block.rs
steel-core/src/behavior/items/: bonemeal.rs  flint_and_steel.rs  honeycomb.rs  mod.rs  potion.rs  sign_item.rs
steel-core/src/block_entity/: block_state_nbt.rs  mod.rs  registry.rs  storage.rs
steel-core/src/block_entity/entities/: barrel.rs  beehive.rs  comparator.rs  daylight_detector.rs  end_gateway.rs  end_portal.rs  mod.rs  piston_moving.rs  potent_sulfur.rs  raw.rs  sign.rs
steel-core/src/chunk/: block_entity_listener.rs  chunk_access.rs  chunk_holder.rs  chunk_map.rs  chunk_pyramid.rs  chunk_request.rs  chunk_scheduler.rs  chunk_ticket_manager.rs  full_chunk_readiness.rs  gameplay_chunk_lookup_cache.rs  heightmap.rs  level_chunk.rs  mod.rs  paletted_container.rs  proto_chunk.rs  section.rs
steel-core/src/chunk/level_chunk/: game_event_tests.rs
steel-core/src/chunk_saver/: format.rs  region_manager.rs  storage.rs
steel-core/src/command/builtins/: enchant.rs
steel-core/src/command/execution/: text.rs
steel-core/src/entity/: entity.rs  item_frame.rs  living_entity.rs  manager.rs  mob.rs  mod.rs  registry.rs  tests.rs
steel-core/src/entity/entities/: block_display.rs  chest_minecart.rs  ender_pearl.rs  experience_orb.rs  firework_rocket.rs  item.rs  item_frame.rs  leash_fence_knot.rs  pig.rs
steel-core/src/fluid/: collision.rs  conversion.rs  flowing_fluid.rs  fluid_behavior.rs  mod.rs  spread_context.rs  state.rs
steel-core/src/fluid/fluids/: empty.rs  lava.rs  water.rs
steel-core/src/inventory/: chest_menu.rs  container.rs  crafting_menu.rs  inventory_menu.rs  lock.rs  menu.rs  slot.rs
steel-core/src/physics/: collision.rs
steel-core/src/player/: block_breaking.rs  chunk_sender.rs  connection.rs  game_mode.rs  mod.rs  networking.rs  player_inventory.rs  profile_lookup.rs
steel-core/src/portal/: end_gateway.rs
steel-core/src/server/: mod.rs  packet_processor.rs  pregen.rs  tick_rate_manager.rs
steel-core/src/world/: block_entity_ticker.rs  block_event.rs  environment.rs  game_event_listener.rs  level_reader.rs  mod.rs  neighbor_updater.rs  redstone.rs  signal_getter.rs  tick_scheduler.rs  world_entities.rs
steel-core/src/worldgen/: region.rs  template.rs
steel-core/src/worldgen/generators/: flat.rs  vanilla.rs
steel-core/src/worldgen/stages/: leaf_distance.rs  light.rs  mod.rs
steel-core/src/worldgen/structure_piece_placer/: scattered_feature.rs  template_piece.rs
steel-core/tests/: chunk_stage_hashes.rs
steel-core/tests/support/: mod.rs
steel-registry/build_assets/: block_entities.json  entities.json  fluids.json
steel-registry/src/: attribute.rs  banner_pattern.rs  biome.rs  block_entity_type.rs  damage_type.rs  dialog.rs  enchantment.rs  entity_type.rs  instrument.rs  item_predicate.rs  jukebox_song.rs  lib.rs  macros.rs  mob_effect.rs  painting_variant.rs  particle_type.rs  position_source.rs  potion.rs  structure.rs  tags.rs  timeline.rs  trim_material.rs  trim_pattern.rs  villager_type.rs  world_clock.rs
steel-registry/src/blocks/: behavior.rs  block_state_ext.rs  mod.rs  properties.rs  shapes.rs
steel-registry/src/data_components/components/: potion_contents.rs
steel-registry/src/fluid/: mod.rs
steel-registry/src/items/: mod.rs
steel-registry/src/poi/: mod.rs
steel-utils/: Cargo.toml
steel/src/: config.rs  main.rs
(+86 files in other folders)
